[package]
name = "twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rusqlite = "0.30"
r2d2 = "0.8"
r2d2_sqlite = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.30"
tokio = {version = "1.35.1", features = ["full"]}
tracing = "0.1"
tracing-actix-web = "0.7"
chrono = "0.4.31"
env_logger = "0.10.1"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
